# delib-ethics-evals

./: .gitignore  GITHUB_SETUP.md  README.md  breakdown.md  pyproject.toml  report.md
delib_ethics_eval/: __init__.py  api.py  io.py  metrics.py  run.py
delib_ethics_eval/envs/: __init__.py  social_env.py
delib_ethics_eval/policies/: __init__.py  deliberation.py  single.py
prompts/: agent_system.txt  critic_system.txt  decider_system.txt  judge_system.txt  planner_system.txt
runs/: run_deliberation_4ep42seed.jsonl  run_single_5eps42seed.jsonl
