[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "delib-ethics-eval"
version = "0.1.0"
description = "Minimal evaluation: does multi-agent deliberation reduce unethical behavior?"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["delib_ethics_eval*"]
